#925 Fix keyframe alignment (css) when adding new keyframe to list

--- a/app/assets/stylesheets/keyframes.css.less
+++ b/app/assets/stylesheets/keyframes.css.less
@@ -18,6 +18,11 @@
     position: relative;
     background-color: @white;
     border: 1px solid #666;
+    line-height: 150px;
+
+    span span {
+      height: 84px;
+    }
 
     .main {
       .round-corners();
